--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -1,6 +1,41 @@
+@import 'variables';
+
 @media only screen and (max-width: 40em)  { 
   
+  .main-container {
+    padding-top: 45px;
+    
+    .blue_announcements {
+      border-top: 1px solid black;
+      background-color: $darkerturq;
+      color: black;
+      font-family: Roboto, sans-serif;
+      .row {
+        border-bottom: 1px solid black;
+        padding: 0.8rem 0;
+        overflow: hidden;
+      }
+
+      .title_box {
+        font-size: 0.938rem;
+        a {
+          color: black;
+          
+        }
+      }
+      .blurb {
+        font-size: 0.8rem;
+      }
+    }
+  }
+  
+  .post {
+    padding: 1rem 0;
+  }
   header {
+    .image_credit {
+      font-size: 0.6rem;
+    }
     &.type1 {
       background: url(image_path('mobile_top_image1.png')) no-repeat top center;
     }
