--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -16,14 +16,14 @@
         overflow: hidden;
       }
 
-      .title_box {
+      .titlex {
         font-size: 0.938rem;
         a {
           color: black;
           
         }
       }
-      .blurb {
+      .blurb_mobile {
         font-size: 0.8rem;
       }
     }
