--- a/app/views/admin/submissions/show.html.haml
+++ b/app/views/admin/submissions/show.html.haml
@@ -76,9 +76,12 @@
     .medium-3.columns.metadata
       Comment by
       = comment.user.name
-      at
-      = comment.created_at.strftime("%d %b %Y %H:%M")
-      = " (#{time_ago_in_words(comment.created_at)} ago)"
+      .date
+        at
+        = comment.created_at.strftime("%d %b %Y %H:%M")
+        = " (#{time_ago_in_words(comment.created_at)} ago)"
+      - if comment.user.avatar?
+        = image_tag comment.user.avatar.url(:thumb)
     .medium-7.columns.end
       = raw simple_format(comment.comment)
       
