--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,5 +1,5 @@
 .row
-  .medium-2.columns.medium-offset-1.hide-for-small-only
+  .medium-2.columns.medium-offset-1.hide-for-small-only.front_icon
     - if post.photos.empty?
       = link_to  image_tag('hm_logo.png'), post
     - else
