--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -10,6 +10,6 @@
         .blue_heading
           = raw post.category
         .title= link_to post.title, post
-        .date= l post.published_at, format: :short
+        .date= post.published_at.strftime("%d %B %Y")
         .body= raw truncate_html(sanitize(post.body, tags: %w{bold b strong u underline i italic em}), length: 600)
         
