--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,7 +1,8 @@
 = semantic_nested_form_for [:admin, @post], html: {multipart: true, :"data-abide" =>''} do |f|
 
-    .row
-      .small-12.large-6.columns#error_explanation
+  .row
+    .small-12.large-6.columns#error_explanation
+      - unless @post.errors.empty?
         %h2= "#{pluralize(@post.errors.count, "error")} prohibited this post from being saved:"
         %ul
           - @post.errors.full_messages.each do |msg|
