--- a/app/views/admin/posts/index.html.haml
+++ b/app/views/admin/posts/index.html.haml
@@ -1,15 +1,18 @@
 .row
   .small-12.columns
-    %h1 Listing posts
+    %h3 Blog posts
 
+.row
+  .small-12.columns
+    = link_to 'New post', new_admin_post_path, class: [:button, :small]
     %table
       %thead
         %tr
-          %th Title
-          %th Body
-          %th Published
-          %th User
-          %th Published at
+          %th= sortable_column "Title"
+          %th= sortable_column "Body"
+          %th= sortable_column "Published"
+          %th= sortable_column "Posted by"
+          %th= sortable_column "Published at"
           %th
 
       
@@ -20,14 +23,14 @@
               = post.title
               - if post.sticky == true
                 %strong In Announcement box!
-            %td= raw truncate_html(post.body, length: 300)
-            %td= post.published
-            %td= post.user.try(:name)
-            %td= post.published_at.blank? ? '' : l(post.published_at, format: :long)
+            %td.body= raw truncate_html(strip_tags(post.body), length: 250)
+            %td= post.published == true ? "yes" : "no"
+            %td= post.user.name.blank? ? post.user.email : post.user.name
+            %td= post.published_at.blank? ? '' : post.published_at.strftime("%d %b %Y")
             %td
-              = link_to 'Show', post, class: [:button, :small]
-              = link_to 'Edit', edit_admin_post_path(post), class: [:button, :small]
-              = link_to 'Destroy', [:admin, post], :method => :delete, :data => { :confirm => 'Are you sure?' }, class: [:button, :small, :alert]
+              = link_to 'Show', post, class: [:button, :tiny], target: :_blank
+              = link_to 'Edit', edit_admin_post_path(post), class: [:button, :tiny]
+              = link_to 'Destroy', [:admin, post], :method => :delete, :data => { :confirm => 'Are you sure?' }, class: [:button, :tiny, :alert]
 
     %br
 
