beginning to restore deleted questions

--- a/app/views/admin/calls/index.html.haml
+++ b/app/views/admin/calls/index.html.haml
@@ -1,11 +1,11 @@
 .row
   .small-12.columns
-    %h1 Open calls
+    %h3 Open calls
 
     %table
       %thead
         %tr
-          %th Name
+          %th= sortable_column "Name"
           %th Deadline
           %th Submissions
           %th Actions
