--- a/app/views/admin/submissions/index.html.haml
+++ b/app/views/admin/submissions/index.html.haml
@@ -9,7 +9,7 @@
     .small-12.columns
       %table
         %thead
-          %th Received?
+          %th= sortable_column "Received?"
           %th= sortable_column "Submitted by"
           %th= "Score"
           %th= sortable_column "Comments"
