--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -29,7 +29,7 @@
           
     .row
       .small-10.medium-8.columns.medium-offset-2
-        .body= raw sanitize(@post.body, tags: %w{bold b strong a u underline i italic em})
+        .body= raw sanitize(@post.body, tags: %w{bold b strong a u p br underline i italic em})
     .row
       .small-10.medium-3.columns.small-centered
         - unless @post.previous.nil?
