--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -63,10 +63,10 @@
               
             .medium-10.large-6.large-centered.columns.medium-left
               .row
-                .small-3.columns.small-text-center= link_to 'About', page_path('about')
-                .small-3.columns.small-text-center= link_to 'News', posts_path
+                .small-2.medium-3.columns.small-text-center= link_to 'About', page_path('about')
+                .small-2.medium-3.columns.small-text-center= link_to 'News', posts_path
                 .small-3.columns.small-text-center= link_to 'Partners', partners_path
-                .small-3.columns.small-text-center.end= link_to 'Programme', page_path('programme')
+                .small-4.medium-3.columns.small-text-center.end= link_to 'Programme', page_path('programme')
           .row.down_arrow
             .medium-3.columns.hide-for-small-only
               &nbsp;
