--- a/app/views/calls/show.html.haml
+++ b/app/views/calls/show.html.haml
@@ -9,10 +9,17 @@
       %ol
         - @call.headings.each do |heading|
           %li.heading= link_to heading.last, '#', onclick: "scrollTo('a[name=#{heading.first}]');return false;"
+        
+  - unless @call.photos.empty?
+    .row
+      .small-12.medium-8.columns.medium-offset-2
+        
+        .image_carousel{style: @call.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
           
-  .image_carousel
-    - @call.photos.each do |photo|
-      .slide= image_tag photo.image.url
+          - @call.photos.each do |photo|
+            .slide[photo]
+              = image_tag photo.image.url(:standard)
+              .thumb= image_tag photo.image.url(:thumb)
       
   - if @call.headings.empty? || (@call.chunks.size != @call.headings.size)
     .row
@@ -45,12 +52,19 @@
         = link_to 'Apply now', apply_call_path(@call), class: [:button, :application]
 
     - if @call.photos.size > 1
-      :plain
-        $('.image_carousel').slick({infinite: true,
-          arrows: false,
-          slide: '.slide',
-          variableWidth: false,
-          autoplay: true,
-          autoplaySpeed: 2400,
-          slidesToScroll: 1,
-        });        
+      = content_for :jquery do
+        :plain
+          $('.image_carousel').slick({infinite: true,
+            arrows: true,
+            slide: '.slide',
+            adaptiveHeight: false,
+
+            dots: true,
+            customPaging: function(slick,index) {
+               return slick.$slides.eq(index).find('.thumb').html() ;
+            },
+            variableWidth: false,
+            autoplay: true,
+            autoplaySpeed: 2400,
+            slidesToScroll: 1,
+          });
