--- a/app/views/admin/symposia/_form.html.haml
+++ b/app/views/admin/symposia/_form.html.haml
@@ -24,7 +24,7 @@
       .small-12.column= g.link_to_remove 'Delete this group', class: [:button, :tiny, :alert]
   .row
     .small-12.columns
-      = f.link_to_add 'Add a group', :groups, class: [:button, :tiny]
+      = f.link_to_add 'Add a group', :groups, class: [:button, :secondary,  :tiny]
 
   .row
     .small-12.columns= f.submit 'Save', class: [:button ]  
