--- a/app/views/calls/apply.html.haml
+++ b/app/views/calls/apply.html.haml
@@ -3,59 +3,70 @@
     .row
       .medium-10.medium-offset-3.columns
         %h3= "Apply to #{@call.name}"
-
+    - listcounter = 1
     = form.fields_for @submission do |f|
+      
       .row
         .medium-2.small-offset-1.small-4.columns.left_form
-          .form_label.text-left 1. First name
+          .form_label.text-left= "#{listcounter}. First name"
         .small-7.medium-4.end.columns= f.input :first_name, input_html: {required: ''}, label: false
+        - listcounter += 1
       .row
-        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 2. Last name
+        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "#{listcounter}. Last name"
         .small-7.medium-4.end.columns= f.input :last_name, input_html: {required: '' }, label: false
+        - listcounter += 1
+      - unless @call.symposium
+        .row
+          .medium-2.small-offset-1.small-4.columns.text-left.left_form
+            .form_label.text-left= "#{listcounter}. Group name"
+            .hint.text-left Optional
+          .small-7.medium-4.end.columns= f.input :organisation_name, label: false 
+          - listcounter += 1
         
       .row
-        .medium-2.small-offset-1.small-4.columns.text-left.left_form
-          .form_label.text-left 3. Group name
-          .hint.text-left Optional
-        .small-7.medium-4.end.columns= f.input :organisation_name, label: false
-        
-      .row
-        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 4. Address
+        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "#{listcounter}. Address"
         .small-7.medium-4.end.columns= f.input :address, input_html: {required: ''}, label: false
+        - listcounter += 1
         
       .row
-        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 5. City
+        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "#{listcounter}. City"
         .small-7.medium-4.end.columns= f.input :city, input_html: {required: ''}, label: false
-        
-      .row
-        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 6. Country of residence
-        .small-7.medium-4.end.columns= f.input :country, as: :country,priority_countries: [], only: ["AX", "DK", "FI", "FO",  "GL","IS", "NO", "SE" ], input_html: {required: ''}, label: false
-        
+        - listcounter += 1
+      - unless @call.symposium  
+        .row
+          .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "#{listcounter}. Country of residence"
+          .small-7.medium-4.end.columns= f.input :country, as: :country,priority_countries: [], only: ["AX", "DK", "FI", "FO",  "GL","IS", "NO", "SE" ], input_html: {required: ''}, label: false
+          - listcounter += 1
     
       .row
-        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 7. Date of birth
+        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "#{listcounter}. Date of birth"
         .small-7.medium-4.end.columns= f.input :date_of_birth,  :input_html => { :class => "fdatepicker", required: ''}, label: false
+        - listcounter += 1
       .row
-        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 8. Nationality
+        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "#{listcounter}. Nationality "
         .small-7.medium-4.end.columns= f.input :nationality,  as: :country, priority_countries: ["AX", "DK", "FI", "FO",  "GL","IS", "NO", "SE" ], input_html: {required: ''}, label: false
+        - listcounter += 1
         
       .row.has_topline
         .medium-2.small-offset-1.small-4.columns.text-left.left_form
-          .form_label 9. Short biography
+          .form_label= "#{listcounter}. Short biography"
           .hint 1500 char. max
         .small-7.end.columns
           = f.input :short_biography, label: false, as: :text, :maxlength => 1500
           %p.counter= f.object.new_record? ? "1500 characters remaining" : "#{1500 - f.object.description.length} characters remaining"
+          - listcounter += 1
         
       .row
-        .medium-2.small-offset-1.small-4.columns.text-left.form_label.left_form 10. Email address
+        .medium-2.small-offset-1.small-4.columns.text-left.form_label.left_form= "#{listcounter}. Email address"
         .small-7.medium-4.end.columns= f.input :email, input_html: {required: ''}, label: false
+        - listcounter += 1
         
       .row
-        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 11. Website
+        .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "#{listcounter}. Website"
         .small-7.medium-4.end.columns= f.input :website, label: false
+        - listcounter += 1
         
-      - counter = 12
+      - counter = listcounter
       = f.fields_for :answers do |ff|
         .row{class:  ff.object.question.question_type.to_sym == :text ? :has_topline : false }
           .medium-2.small-offset-1.small-4.columns.text-left.left_form
