--- a/app/views/calls/apply.html.haml
+++ b/app/views/calls/apply.html.haml
@@ -82,6 +82,8 @@
                 .selected_file
             - elsif ff.object.question.question_type.to_sym == :boolean
               = ff.input :answer_boolean, label: false,  as: :boolean
+            - elsif ff.object.question.question_type.to_sym == :group_select
+              = ff.input :answer_text, as: :select, collection: @call.symposium.groups, label: false, input_html: { required: ff.object.question.required == true ? '' : false }
             - else
               = ff.input :answer_text, as: ff.object.question.question_type.to_sym, label: false, input_html: { required: ff.object.question.required == true ? '' : 'ssss' }
               - if  ff.object.question.question_type.to_sym == :text
