--- a/app/views/calls/show.html.haml
+++ b/app/views/calls/show.html.haml
@@ -2,7 +2,7 @@
   .row
     .medium-2.columns.hide-for-small-only &nbsp;
     .small-12.columns.medium-8
-      .small_heading Call For Artworks
+      .small_heading Open Call
       %h1= @call.name
 
     .medium-2.columns.hide-for-small-only.navigator
